--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,7 +19,7 @@
                 <h3 class="float-md-start mb-0">Travel Guide</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="/campgrounds">Campgrounds</a>
+                    <a class="nav-link" href="/campgrounds">Tourist Spots</a>
                     <% if(!currentUser) { %>
                     <a class="nav-link" href="/login">Login</a>
                     <a class="nav-link" href="/register">Register</a>
@@ -32,14 +32,15 @@
         </header>
         <main class="px-3">
             <h1>YelpCamp</h1>
-            <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
+            <p class="lead"> Welcome to Travel Guide! <br> Jump right in and explore our many tourist spots. <br>
                 Feel free to share some of your own and comment on others!</p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
-                Campgrounds</a>
+                Tourist Spots</a>
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2020 </p>
+            <p>&copy; 2023 </p>
+            <h6>Thanks to Colt Steele</h6>
         </footer>
 
     </div>
