--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,7 +2,7 @@
 <% layout('layouts/boilerplate')%>
 
 <div class="row">
-    <h1 class="text-center">Edit Campground</h1>
+    <h1 class="text-center">Edit Tourist Spot</h1>
     <div class="col-md-6 offset-md-3 ">
         
         <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
@@ -26,7 +26,7 @@
  
 
             <div class="mb-3">
-                <label class="form-label" for="price">Campground Price</label>
+                <label class="form-label" for="price">Tourist Spot Price</label>
                 <div class="input-group mb-3">
                     
                     <span class="input-group-text" id="price-label">$</span>
@@ -62,10 +62,10 @@
             </div>
 
             <div class="mb-3">
-                <button class="btn btn-info">Update Campground</button>
+                <button class="btn btn-info">Update Travel Spot</button>
             </div>
         </form>
-        <a href="/campgrounds/<%=campground._id%>">Back to Campgrounds</a>
+        <a href="/campgrounds/<%=campground._id%>">Back to Travel Spots</a>
 
     </div>
 </div>
