--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,8 +1,8 @@
 <% layout('layouts/boilerplate')%>
 <div id="cluster-map" ></div>
-<h1>All Campgrounds</h1>
+<h1>All Sightseeing Places</h1>
 <div>
-    <a href="/campgrounds/new">Add Campgrounds</a>
+    <a href="/campgrounds/new">Add Tourist Spots</a>
 </div>
 <% for (let campground of campgrounds) {%>
 <div class="card mb-3">
