--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,7 +1,7 @@
 
 <% layout('layouts/boilerplate')%>
 <div class="row">
-    <h1 class="text-center">New Campground</h1>
+    <h1 class="text-center">New Tourist Place</h1>
     <div class="col-6 offset-3">
         
         <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
@@ -43,7 +43,7 @@
             
 
             <div class="mb-3">
-                <label class="form-label" for="price">Campground Price</label>
+                <label class="form-label" for="price">Tourist Place Price</label>
                 <div class="input-group">
                     
                     <span class="input-group-text" id="price-label">$</span>
@@ -69,10 +69,10 @@
             </div>
 
             <div class="mb-3">
-                <button class="btn btn-success">Add Campground</button>
+                <button class="btn btn-success">Add New Tourist Place</button>
             </div>
         </form>
-        <a href="/campgrounds">All Campgrounds</a>
+        <a href="/campgrounds">All Tourist Places</a>
 
     </div>
 </div>
