--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Yelp Camp</a>
+      <a class="navbar-brand" href="#">Travel Guide</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -9,8 +9,8 @@
         <div class="navbar-nav">
 
           <a class="nav-link"  href="/">Home</a>
-          <a class="nav-link" href="/campgrounds">Campgrounds</a>
-          <a class="nav-link" href="/campgrounds/new">New Campground</a>
+          <a class="nav-link" href="/campgrounds">Tourist Spots</a>
+          <a class="nav-link" href="/campgrounds/new">New Sights</a>
           
         </div>
         <div class="navbar-nav ms-auto">
