--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
         
         </header>
         <main class="px-3">
-            <h1>YelpCamp</h1>
+            <h1>Travel Guide<h5>By Sunitha</h5></h1>
             <p class="lead"> Welcome to Travel Guide! <br> Jump right in and explore our many tourist spots. <br>
                 Feel free to share some of your own and comment on others!</p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
